# ai-commit

./: README.md  pyproject.toml
ai_commit/: __main__.py
